SCHEDULING-1514 Create stress and performance tests for scheduler and resource manager
Minor refactoring, got rid of redundant classes.
 

git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/scheduling/trunk@21609 28e8926c-6b08-0410-baaa-805c5e19b8d6